After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754153 - smpte: memory leak
smpte: memory leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other Linux
: Normal normal
: 1.5.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-08-27 04:48 UTC by RaviKiran
Modified: 2015-08-28 18:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix memory leak (1.32 KB, patch)
2015-08-27 04:50 UTC, RaviKiran
committed Details | Review

Description RaviKiran 2015-08-27 04:48:24 UTC
If input formats do not match in gst_smpte_collected(), it returns GST_FLOW_ERROR. However, memory allocated for buffers in1 and in2 are not freed.
Comment 1 RaviKiran 2015-08-27 04:50:11 UTC
Created attachment 310070 [details] [review]
Fix memory leak

Patch attached. Please review.
Comment 2 Sebastian Dröge (slomo) 2015-08-27 08:14:11 UTC
commit cac239ab89db5c37b59f078c734b2f8e5298c389
Author: Ravi Kiran K N <ravi.kiran@samsung.com>
Date:   Thu Aug 27 10:28:55 2015 +0530

    smpte: Fix memory leak
    
    In gst_smpte_collected(), check upfront if input formats are same
    or not. This avoids allocation of in1 and in2 buffers and
    subsequent memory leak when input formats do not match.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=754153